--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,55 +8,55 @@ edition = "2024"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# core
-tokio = { version = "1.48.0", features = ["full"] }
-tokio-util = "0.7.17"
-hyper = { version = "1.8.1", features = ["full"] }
-http = "1.3.1"
-mimalloc = "0.1.48"
+anyhow = "1.0.100"
 axum = { version = "0.8.7", features = ["macros"] }
 axum-extra = { version = "0.12.2", features = ["typed-header"] }
 axum-server = { version = "0.7.3", features = ["tls-rustls"] }
-tower = { version = "0.5.2", features = ["full"] }
-tower-http = { version = "0.6.6", features = ["full"] }
-reqwest = { version = "0.12.24", default-features = false, features = [
-    "rustls-tls",
-    "charset",
-    "http2",
-    "system-proxy",
-    # "native-tls-vendored",
-    "zstd",
-    'gzip',
-    'brotli',
-    'deflate',
-    "stream",
-] }
+chrono = "0.4.42"
+clap = { version = "4.5.53", features = ["derive"] }
+const_format = "0.2.35"
+dashmap = { version = "6.1.0", features = ["serde"] }
+http = "1.3.1"
+hyper = { version = "1.8.1", features = ["full"] }
+md5 = "0.8.0"
+mimalloc = "0.1.48"
+mime_guess = "2.0.5"
 # lua
 mlua = { version = "0.11.5", features = [
-    "lua54",
-    "vendored",
-    "send",
-    "async",
-    "macros",
-    "serialize",
-    "anyhow",
+  "anyhow",
+  "async",
+  "lua54",
+  "macros",
+  "send",
+  "serialize",
+  "vendored",
 ] }
+reqwest = { version = "0.12.24", default-features = false, features = [
+  "brotli",
+  "charset",
+  "deflate",
+  "gzip",
+  "http2",
+  "rustls-tls",
+  "stream",
+  "system-proxy",
+  # "native-tls-vendored",
+  "zstd",
+] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_repr = "0.1.20"
 # tools
 thiserror = "2.0.17"
-anyhow = "1.0.100"
-serde = { version = "1.0.228", features = ["derive"] }
+# core
+tokio = { version = "1.48.0", features = ["full"] }
+tokio-util = "0.7.17"
 toml = "0.9.8"
-const_format = "0.2.35"
-md5 = "0.8.0"
-dashmap = { version = "6.1.0", features = ["serde"] }
+tower = { version = "0.5.2", features = ["full"] }
+tower-http = { version = "0.6.6", features = ["full"] }
 # logging
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
-clap = { version = "4.5.53", features = ["derive"] }
-serde_repr = "0.1.20"
-mime_guess = "2.0.5"
-chrono = "0.4.42"
 tracing-appender = "0.2.3"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 
 # tokio-rustls = "0.26.2"
 # hyper-util = { version = "0.1.16", features = ["full"] }
@@ -69,14 +69,14 @@ tracing-appender = "0.2.3"
 tempfile = "3.23.0"
 
 [profile.dev]
-incremental = true # Compile your binary in smaller steps.
+incremental = true  # Compile your binary in smaller steps.
 # rustflags = ["-Zthreads=8"] # Better compile performance.
 
 [profile.release]
-codegen-units = 1 # Allows LLVM to perform better optimization.
-lto = true        # Enables link-time-optimizations.
-opt-level = 3     # Prioritizes small binary size. Use `3` if you prefer speed.
-panic = "abort"   # Higher performance by disabling panic handlers.
-strip = true      # Ensures debug symbols are removed.
+opt-level = 3  # Prioritizes small binary size. Use `3` if you prefer speed.
+strip = true  # Ensures debug symbols are removed.
+lto = true  # Enables link-time-optimizations.
+panic = "abort"  # Higher performance by disabling panic handlers.
+codegen-units = 1  # Allows LLVM to perform better optimization.
 # trim-paths = "all" # Removes potentially privileged information from your binaries.
 # rustflags = ["-Cdebuginfo=0", "-C", "target-cpu=native", "-Z", "threads=8"]
