--- a/examples/config.example.toml
+++ b/examples/config.example.toml
@@ -13,3 +13,13 @@ port = 8080
 [[host.route]]
 location = "/"
 proxy_pass = "https://www.google.com/"
+
+[[host]]
+ip = "0.0.0.0"
+port = 8081
+server_name = "proxy.example.com"
+[[host.route]]
+location = "/"
+forward_proxy = true
+proxy_timeout = 30
+max_body_size = 10485760
