--- a/examples/config.example_full.toml
+++ b/examples/config.example_full.toml
@@ -78,7 +78,19 @@ port = 8081
 location = "/lua"
 lua_script = "./scripts/handler.lua" # Path to Lua script
 
-# Example 5: Multiple routes on same host
+# Example 5: Forward proxy
+[[host]]
+ip = "0.0.0.0"
+port = 8083
+server_name = "proxy.example.com"
+
+[[host.route]]
+location = "/"
+forward_proxy = true                # Enable forward proxy
+proxy_timeout = 30                  # Proxy timeout in seconds (default: 5)
+max_body_size = 10485760            # 10MB max body size
+
+# Example 6: Multiple routes on same host
 [[host]]
 ip = "0.0.0.0"
 port = 8082
