--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,8 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 [dev-dependencies]
 tempfile = "3.24.0"
+reqwest = "0.13.1"
+tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
