--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ mlua = { version = "0.11.6", optional = true, features = [
     "vendored",
 ] }
 notify = "8.2.0"
+async-stream = "0.3.5"
 futures = "0.3.32"
 reqwest = { version = "0.13.2", default-features = false, features = [
     "brotli",
