--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,8 +75,19 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 
 [dev-dependencies]
 tempfile = "3.26.0"
-reqwest = "0.13.2"
+reqwest = { version = "0.13.2", default-features = false, features = [
+    "brotli",
+    "charset",
+    "deflate",
+    "gzip",
+    "http2",
+    "rustls",
+    "stream",
+    "system-proxy",
+    "zstd",
+] }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
+serde_json = "1.0"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
