--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,6 +88,7 @@ reqwest = { version = "0.13.2", default-features = false, features = [
 ] }
 tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
 serde_json = "1.0"
+serial_test = "3.2"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
